Fixed some spacing issues

--- a/src/styles/Help.module.css
+++ b/src/styles/Help.module.css
@@ -1,5 +1,5 @@
 .boxVisible, .boxHidden {
-    height: 80vh;
+    height: 80%;
     position: fixed;
     left: 0;
     width: 100vw;
@@ -15,17 +15,17 @@
     display: flex;
     flex-direction: column;
 
-    padding-top: 35px;
+    padding-top: 25px;
 
     transition: top 0.4s ease-in;
 }
 
 .boxVisible {
-    top: 20vh;
+    top: 20%;
 }
 
 .boxHidden {
-    top: 120vh;
+    top: 120%;
 }
 
 .summaryItem {
@@ -33,7 +33,7 @@
 }
 
 .summaryItem h1 {
-    margin-bottom: 1vh;
+    margin-bottom: 1%;
 }
 
 .summaryItem div {
@@ -48,7 +48,7 @@
     background-color: #00000044;
     margin-left: 5%;
 
-    --separator-margin-help: 3vh;
+    --separator-margin-help: 1.5%;
     margin-top: var(--separator-margin-help);
     margin-bottom: var(--separator-margin-help);
 }
