--- a/src/styles/Summary.module.css
+++ b/src/styles/Summary.module.css
@@ -1,5 +1,5 @@
 .boxVisible, .boxHidden {
-    height: 80vh;
+    height: 80%;
     position: fixed;
     left: 0;
     width: 100vw;
@@ -15,17 +15,17 @@
     display: flex;
     flex-direction: column;
 
-    padding-top: 35px;
+    padding-top: 25px;
 
     transition: top 0.4s ease-in;
 }
 
 .boxVisible {
-    top: 20vh;
+    top: 20%;
 }
 
 .boxHidden {
-    top: 120vh;
+    top: 120%;
 }
 
 .summaryItem {
@@ -49,7 +49,7 @@
     background-color: #00000044;
     margin-left: 5%;
 
-    --separator-margin: 3vh;
+    --separator-margin: 5%;
     margin-top: var(--separator-margin);
     margin-bottom: var(--separator-margin);
 }
